# Animatek-NME

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MODULE_CHECKLIST.md  PLUGIN_ARCHITECTURE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.7.0.md  RESEARCH.md  ROADMAP.md  SHORTCUTS.md  STATUS.md
.github/workflows/: build-binaries.yml
data/: classic-theme.xml
packaging/: README-linux.txt  README-macos.txt  README-windows.txt
source/: Main.cpp  MainComponent.cpp  MainComponent.h
source/help/: ModuleHelpData.h  ModuleHelpPopup.cpp
source/midi/: ConnectionManager.cpp  ConnectionManager.h  MidiDeviceManager.cpp  MidiMonitor.cpp  MidiMonitor.h  NmMessages.cpp
source/model/: Descriptors.h  ModuleDescriptions.cpp  ModuleTags.cpp  ModuleTags.h  MutationCategories.cpp  MutationCategories.h  Mutator.cpp  Mutator.h  Patch.cpp  Patch.h  PatchParser.cpp  PatchSerializer.cpp  PatchVariations.cpp  PatchVariations.h  PchFileIO.cpp  SnipFileIO.cpp  SnipFileIO.h
source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/protocol/: KnobAssignmentMessage.cpp  KnobAssignmentMessage.h  SendControllerSnapshotMessage.cpp  SendControllerSnapshotMessage.h
source/sync/: BankTransferManager.cpp  BankTransferManager.h  PatchSynchronizer.cpp
source/ui/: AppTheme.cpp  AppTheme.h  BankTransferDialog.cpp  BankTransferDialog.h  ColorScheme.cpp  ColorScheme.h  EditorOptionsDialog.cpp  EditorOptionsDialog.h  FlatCloseButton.h  InspectorPanel.cpp  KeyboardFloaterWindow.cpp  KeyboardFloaterWindow.h  KnobFloaterWindow.cpp  KnobFloaterWindow.h  MainLayout.cpp  MainLayout.h  MidiSettingsDialog.cpp  ModuleBrowserPanel.cpp  MutatorWindow.cpp  MutatorWindow.h  PatchBrowserPanel.cpp  PatchBrowserPanel.h  PatchCanvasComponent.cpp  PatchCanvasComponent.h  PatchHeaderBar.cpp  PatchHeaderBar.h  PatchLocationDialog.cpp  PatchNotesFloaterWindow.cpp  PatchNotesFloaterWindow.h  PatchSettingsDialog.cpp  PresetBrowserWindow.cpp  PresetBrowserWindow.h  QuickAddPopup.cpp  QuickAddPopup.h  StatusBar.cpp  StatusBar.h  SynthSettingsDialog.cpp  SysexMonitorWindow.cpp  SysexMonitorWindow.h  ThemeRegistry.cpp  (+1 more)
source/undo/: PatchActions.h
